--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,12 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "typegen": "npx @chakra-ui/cli typegen ./src/theme/index.ts",
+    "postinstall": "npm run typegen"
   },
   "dependencies": {
     "@chakra-ui/react": "^3.23.0",
-    "@chakra-ui/theme-tools": "^2.2.6",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "framer-motion": "^12.23.11",
@@ -21,6 +22,7 @@
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
+    "@chakra-ui/cli": "^3.23.0",
     "@eslint/js": "^9.30.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
