--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "client"
   ],
   "scripts": {
-    "install-all": "npm install",
+    "install-all": "npm install --workspaces",
+	"lint": "eslint . --ext .ts,.tsx",
+	"typegen": "npx @chakra-ui/cli typegen ./client/src/theme/index.ts",
+	"postinstall": "npm run typegen --workspace=client",
+	"build": "npm run build --workspaces",
+	"lint-all": "npm run lint --workspaces",
+	"build-all": "npm run build --workspaces",
     "build-shared": "npm run build --workspace=shared",
     "start-server": "npm run start --workspace=server",
     "dev-client": "npm run dev --workspace=client"
