feat: Add ColorContext and integrate ColorProvider in main app
feat: Create BackgroundsPage for showcasing available backgrounds

feat: Implement Journey section to display learning milestones and tech stack

feat: Enhance Hero section with new call-to-action buttons and availability status

refactor: Update Projects section layout and improve project card details

chore: Update package.json scripts for better workspace management

chore: Add new keyframes for animations in theme

chore: Update package-lock.json with new dependencies for react-router and types

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "client"
   ],
   "scripts": {
+	"start": "npm run start --workspace=server",
+	"dev": "npm run dev --workspaces",
     "install-all": "npm install --workspaces",
 	"lint": "eslint . --ext .ts,.tsx",
 	"typegen": "npx @chakra-ui/cli typegen ./client/src/theme/index.ts",
