--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,13 @@
     "@chakra-ui/react": "^3.23.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@types/react-router-dom": "^5.3.3",
     "framer-motion": "^12.23.11",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.8.0"
   },
   "devDependencies": {
     "@chakra-ui/cli": "^3.23.0",
