--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
   "chat.mcp.serverSampling": {
-    "portfolio/.vscode/mcp.json: chakra-ui": {
+    "portfolio/.vscode/mcp.json: motion": {
       "allowedModels": [
-        "copilot/claude-sonnet-4",
         "copilot/gpt-4.1",
+        "copilot/claude-sonnet-4",
         "copilot/gpt-5"
       ]
     }
