Refactor: Remove Bryan Shea's resume PDF from assets
Refactor: Update BackgroundSelector component to use IconButton for closing

Refactor: Change job title in hero configuration from "Full Stack Software Engineer" to "Full Stack Developer"

Refactor: Enhance journey data structure to include certificate images for milestones

Refactor: Delete BackgroundsPage and its related index export

Refactor: Remove Hero.refactored component and its export

Refactor: Update Hero component to utilize configuration data and improve animations

Refactor: Enhance Journey section to include certificate images and improve layout

Refactor: Update Projects section to open project links in a new tab

Refactor: Remove unused user model and GraphQL type definitions

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Development environment files
 project_structure.text
 
+# ignore root shared and server folders as theyre not needed
+shared/
+server/
+
 # Logs
 logs
 *.log
