--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -21,13 +21,9 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true,
+    "noUncheckedSideEffectImports": true
 
-    /* Path aliases */
-    "baseUrl": ".",
-    "paths": {
-      "shared/*": ["../shared/src/*"]
-    }
+    /* Path aliases would go here if needed */
   },
   "include": ["src"]
 }
