--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,6 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# WOF (Workspace Orchestration Framework) artifacts
+.wof/artifacts/
