--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.8.0"
+    "react-router-dom": "^7.8.0",
+    "shiki": "^3.12.2"
   },
   "devDependencies": {
     "@chakra-ui/cli": "^3.23.0",
